[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_support"
version = "1.3.1"
description = "Reusable Python modules for various projects."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Mats Gustafsson", email = "matsgus71@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
     "colorlog",
]

[tool.setuptools.packages.find]
where = ["."]
[project.scripts]
pushover-message = "python_support.pushover_message:main"
